New figures created from Ian's examples

--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -3449,6 +3449,15 @@ Year & OFL (mt) & ACL (mt) & Age 3+ biomass (mt) & Spawning Output & Depletion \
 
 \begin{figure}
 \centering
+\includegraphics{r4ss/plots_mod1/POP_index_data.png}
+\caption{Fishery-dependent and fishery-independent indices for Pacific
+ocean perch. \label{fig:indices}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
 \includegraphics{Figures/Q-Q_plot_combo.jpg}
 \caption{Q-Q plots for the VAST lognormal distribution for the NWFSC
 shelf-slope survey. \label{fig:nw_qq}}
@@ -3708,6 +3717,51 @@ previous assessment for Pacific ocean perch. \label{fig:Catch_Compare}}
 \includegraphics{Figures/bridging.png}
 \caption{Comparison of estimates from Stock Synthesis version 3.30 and
 3.24 for Pacific ocean perch. \label{fig:bridge}}
+\end{figure}
+
+\FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/bio1_sizeatage.png}
+\caption{Estimated length-at-age for male and female for Pacific ocean
+perch with estimated CV. \label{fig:sizeatage}}
+\end{figure}
+
+\FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/POP_selectivity.png}
+\caption{Estimated selectivity by length by each fishery and survey for
+Pacific ocean perch. \label{fig:selex}}
+\end{figure}
+
+\FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/POP_retention.png}
+\caption{Estimated retention by length by the trawl fishery for Pacific
+ocean perch. \label{fig:retention}}
+\end{figure}
+
+\FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/POP_discard_fits.png}
+\caption{Estimated fits to the discard rates for Pacific ocean perch.
+\label{fig:discard_fits}}
+\end{figure}
+
+\FloatBarrier 
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/POP_index_fits.png}
+\caption{Estimated fits to the CPUE and survey indices for Pacific ocean
+perch. \label{fig:index_fits}}
 \end{figure}
 
 \FloatBarrier 
