--- a/8_Figures.Rmd
+++ b/8_Figures.Rmd
@@ -43,6 +43,10 @@
 <!-- ****************Length and Age Composition FIGURES******************** --> 
 <!-- ********************************************************************** -->
 
+![Fishery-dependent and fishery-independent indices for `r spp`. \label{fig:indices}](r4ss/plots_mod1/POP_index_data.png)
+
+\FloatBarrier
+
 ![Q-Q plots for the VAST lognormal distribution for the NWFSC shelf-slope survey. \label{fig:nw_qq}](Figures/Q-Q_plot_combo.jpg)
 
 \FloatBarrier
@@ -207,6 +211,41 @@
 ![Comparison of estimates from Stock Synthesis version 3.30 and 3.24 for `r spp`. \label{fig:bridge}](Figures/bridging.png)
 
 \FloatBarrier 
+
+<!-- ********************************************************************** -->
+<!-- *******************Estimated Length-at-Age**************************** --> 
+<!-- ********************************************************************** -->
+
+![Estimated length-at-age for male and female for `r spp` with estimated CV. \label{fig:sizeatage}](r4ss/plots_mod1/bio1_sizeatage.png)
+
+\FloatBarrier 
+
+<!-- ********************************************************************** -->
+<!-- *******************Selectivity & Retention**************************** --> 
+<!-- ********************************************************************** -->
+
+![Estimated selectivity by length by each fishery and survey for `r spp`. \label{fig:selex}](r4ss/plots_mod1/POP_selectivity.png)
+
+\FloatBarrier 
+
+
+![Estimated retention by length by the trawl fishery for `r spp`. \label{fig:retention}](r4ss/plots_mod1/POP_retention.png)
+
+\FloatBarrier 
+
+
+![Estimated fits to the discard rates for `r spp`. \label{fig:discard_fits}](r4ss/plots_mod1/POP_discard_fits.png)
+
+\FloatBarrier 
+
+<!-- ********************************************************************** -->
+<!-- ***********************Fits to the Indices**************************** --> 
+<!-- ********************************************************************** -->
+
+![Estimated fits to the CPUE and survey indices for `r spp`. \label{fig:index_fits}](r4ss/plots_mod1/POP_index_fits.png)
+
+\FloatBarrier 
+
   
 <!-- ********************************************************************** -->
 <!-- ****************Length Composition Fits and EffN********************** --> 
